--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,5 +1,5 @@
 
-{% if post.comments %}
+{% if page.comments %}
     <div id="disqus_thread"></div>
     <script>
 /**
@@ -7,8 +7,8 @@
 * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
 */
 var disqus_config = function () {
-this.page.url = {{ page.url }}
-//this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    this.page.url = '{{ page.url }}';
+    this.page.identifier = '{{ page.url }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
     (function() { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
