--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -7,7 +7,7 @@
 * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
 */
 var disqus_config = function () {
-    this.page.url = '{{ page.url }}';
+    this.page.url = '{{ page.url | prepend: site.url }}';
     this.page.identifier = '{{ page.url }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
     (function() { // DON'T EDIT BELOW THIS LINE
